# MRCP-Plugin-Demo

unimrcp-1.5.0/: Makefile  Makefile.in  config.status  configure  configure.ac  libtool
unimrcp-1.5.0/autom4te.cache/: output.0  traces.0
unimrcp-1.5.0/conf/: Makefile  Makefile.in  unimrcpserver.xml
unimrcp-1.5.0/data/: Makefile  Makefile.in
unimrcp-1.5.0/libs/: Makefile  Makefile.in
unimrcp-1.5.0/libs/apr-toolkit/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mpf/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp-client/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp-engine/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp-server/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcp-signaling/: Makefile  Makefile.in
unimrcp-1.5.0/libs/mrcpv2-transport/: Makefile  Makefile.in
unimrcp-1.5.0/libs/uni-rtsp/: Makefile  Makefile.in
unimrcp-1.5.0/modules/: Makefile  Makefile.in
unimrcp-1.5.0/modules/mrcp-sofiasip/: Makefile  Makefile.in
unimrcp-1.5.0/modules/mrcp-unirtsp/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/deepasr-recog/: Makefile  Makefile.am  Makefile.in
unimrcp-1.5.0/plugins/deepasr-recog/.libs/: deepasrrecog.lai
unimrcp-1.5.0/plugins/deepasr-recog/src/: deepasr_recog_engine.c
unimrcp-1.5.0/plugins/deepasr-recog/src/.deps/: deepasr_recog_engine.Plo
unimrcp-1.5.0/plugins/demo-recog/: Makefile  Makefile.in
unimrcp-1.5.0/plugins/demo-synth/: Makefile  Makefile.in
unimrcp-1.5.0/tests/: Makefile  Makefile.in
(+186 files in other folders)
